# FFmpeg

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/smxxy/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/smxxy/ffmpeg/: MainActivity.kt  WanAVPlayer.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/smxxy/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
